# image_processor

./: BMP.h  BMPImage.cpp  BMPImage.h  BlurFilter.cpp  BlurFilter.h  CMakeLists.txt  Controller.cpp  Controller.h  CropFilter.cpp  CropFilter.h  EdgeFilter.cpp  EdgeFilter.h  Exception.cpp  Exception.h  Exceptions.h  Filters.cpp  Filters.h  GsFilter.cpp  GsFilter.h  MatrixFilter.cpp  MatrixFilter.h  NegFilter.cpp  NegFilter.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  SharpFilter.cpp  SharpFilter.h  SpheresFilter.cpp  SpheresFilter.h  Writer.cpp  Writer.h  image_processor.cpp
tests/: controller_tests.cpp  crop_tests.cpp  parser_tests.cpp  read_tests.cpp  spheres_tests.cpp  write_tests.cpp
